[project]
name = "mlutils-jax"
version = "0.1.0"
description = "Personal utilities for writing JAX."
readme = "README.md"
authors = [
    { name = "saeed", email = "git@saeedc.com" }
]
requires-python = ">=3.12"
dependencies = [
    "orbax-checkpoint>=0.11.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
